manifests/monitoring-satellite/gitpod-blobserveNetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: gitpod
    app.kubernetes.io/part-of: kube-prometheus
  name: blobserve-allow-kube-prometheus
  namespace: default
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          namespace: monitoring-satellite
      podSelector:
        matchLabels:
          app.kubernetes.io/component: prometheus
          app.kubernetes.io/name: prometheus
          app.kubernetes.io/part-of: kube-prometheus
          app.kubernetes.io/version: 2.30.3
          prometheus: k8s
  podSelector:
    matchLabels:
      component: blobserve
  policyTypes:
  - Ingress
